--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.associations": {
 		"__tuple": "c",
-		"array": "c"
+		"array": "c",
+		"minishell.h": "c",
+		"__node_handle": "c"
 	}
 }
