--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ src/b_exit.o
 .vscode/c_cpp_properties.json
 .vscode/settings.json
 .vscode/settings.json
+src/exec_part.o
+src/expander_var-b003029b.o.tmp
